# multimodel-mcp

./: .gitignore  README.md  config.json  file-system-mcp-server.py  gemini-client.py  http_shim.py  pyproject.toml  server.py
frontend/: README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/fs/list/: route.ts
frontend/src/app/api/fs/read/: route.ts
frontend/src/app/api/fs/write/: route.ts
frontend/src/app/api/weather/alerts/: route.ts
frontend/src/app/api/weather/forecast/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/weather/: page.tsx
